Fix translate retry logic by re-injecting the scripts.

Currently retry only re-checks the ready status of the scripts.
To properly retry, the scripts need to be reinjected so a new ready
status can be provided.

Bug: 879821
Change-Id: I3f188a3358435304006c907b7dd3799d907c6a80
Reviewed-on: https://chromium-review.googlesource.com/1200573
Commit-Queue: John Wu <jzw@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589320}
Former-commit-id: df9af169f911522de26fa442ecdd4ea47901b0fa