components/translate/core/browser/resources/translate.js
@@ -163,8 +163,6 @@ cr.googleTranslate = (function() {
   function invokeReadyCallback() {
     if (readyCallback) {
       readyCallback();
-      // Don't notify ready if already notified.
-      readyCallback = null;
     }
   }
 
